<resources>
    <string name="app_name">KUMPULAN BUKU</string>
    <string name="id_buku">ID_Buku</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="tahun_terbit">Tahun Terbit</string>
    <string name="gambar">Ilustrasi Gambar</string>
    <string name="genre">Genre</string>
    <string name="penulis">Penulis</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="tambah">Tambah Buku</string>
    <string name="edit">Edit Buku</string>
    <string name="hapus">Hapus Buku</string>
    <string name="bagikan">Bagikan Buku</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Save</string>
    <string name="data_buku">Tambah Data Buku</string>
    <string name="pilih_tahun">Choose</string>
</resources>
